# python-project-50

./: Makefile  README.md  coverage.xml  demo.cast  pyproject.toml  setup.cfg
.github/workflows/: check.yml
gendiff/: __init__.py  chois_filtter.py  constants.py  data.py  engine.py  parser.py  string_format.py
gendiff/filters/: chois_filtter.py  json.py  plain.py  string_format.py  stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/helpers/: cli.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: expected_diff_json.txt  expected_diff_plain.txt  result_json_json.txt
