[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project - Difference Calculator"
authors = ["DanilMullakhmetov <danilmullakhmetov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^5.0.0"
flake8 = "^3.9.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"